--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
 h1 {
     color: green;
-    
+
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  li {
+      display: inline;
+      float: left;
+
+  }
+  a {
+      display: block;
+      padding: 8px;
+      background-color: #ddd;
+  }
