--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,28 @@ h1 {
 }
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
   }
   li {
       display: inline;
       float: left;
+      border-right: 1px solid #bbb;
 
   }
-  a {
+   li a {
       display: block;
-      padding: 8px;
-      background-color: #ddd;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      background-color: black;
+  }
+  li a:hover {
+      background-color: cyan;
+  }
+  .active {
+    background-color: cyan;
   }
