--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,12 @@ ul {
       background-color: black;
   }
   li a:hover {
-      background-color: cyan;
+      background-color: blue;
   }
   .active {
     background-color: cyan;
   }
   .navbar input[type= text]{
-    float: right;
     float: right;
     padding: 6px;
     border: none;
@@ -49,6 +48,7 @@ ul {
      height: 100%;
      background-color: white;
      margin: auto;
+     border-radius: 10px;
  }
  .grid { 
     display: grid;
@@ -75,10 +75,13 @@ ul {
 }
  .footer img {
      height: 50px;
+     display: inline;
     
  }
- .footer p {
-     text-align: inline;
-     color: green;
-     background-color: grey;
+ .final {
+     background-color: black;
+     color: white;
+     margin: 1%;
+     font-size: larger;
+     border-radius: 15px;
  }
