--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ ul {
   li a:hover {
       background-color: blue;
   }
-   li a:active {
+   .active a:active {
     background-color: blue;
   }
   .navbar input[type= text]{
