--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,11 @@ ul {
      font-size: larger;
      border-radius: 15px;
  }
+ form {
+     justify-content: center;
+     text-align: center;
+     padding: 20px;
+     margin: 5px;
+     border: 2px;
+
+ }
